dashboard: fix alignment of inline forms
`line-height` property was inherited and broke alignment of nested
inline-blocks.

--- a/app/styles/admin/dashboard.less
+++ b/app/styles/admin/dashboard.less
@@ -26,6 +26,9 @@
         display: block;
         height: 2.1em;
         line-height: 2.1em;
+        * {
+            line-height: normal;
+        }
         white-space: nowrap;
     }
 
